# bank-churn-prediction

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
data/: testset.csv  trainset.csv
notebooks/: 00_data_split.ipynb  01_EDA.ipynb  02_modeling.ipynb  02_preprocessing.ipynb
presentation/: 00_data_split.html  01_EDA.html  02_modeling.html
src/config/: paths.py
